--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ html, body {
   margin: 0 auto;
 }
 
+
 .header {
   width: 100%;
   height: 60px;
@@ -39,6 +40,7 @@ html, body {
   /* text-align: right; */
 }
 
+/* formulario */
 .form {
   padding: 10px;
   width: 400px;
@@ -47,19 +49,23 @@ html, body {
   position: relative;
   top: -15px;
   border: 7px solid #ccc;
+  border-color: rgba(120,120,120,0.5);
   /* display: inline-block; */
   background-color: white;
+  background-clip: padding-box;
 
 }
 
 .form h2 {
-  font-size: 20px;
+  margin-top: 10px;
+  font-size: 25px;
   font-weight: normal;
   color: #999;
+  text-align: center;
 }
 
 .inputContainer {
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 .inputContainer  span, p{
@@ -72,6 +78,8 @@ html, body {
 
 
 .inputContainer  input {
+  font-size: 18px;
+  font-weight: normal ;
   margin-top: 15px;
   width: 344px;
   height: 55px;
@@ -88,6 +96,7 @@ html, body {
   margin-top: 40px;
   width: 280px;
   height: 56px;
+  border-radius: 4px;
   background-color: #3c428f;
   border: 0;
   cursor: pointer;
@@ -96,5 +105,24 @@ html, body {
 
 .inputContainer  button:hover{
   background-color:  #232875;
+}
+
+.containerList {
+  padding: 30px;
+  margin-top: 100px;
+  float: left;
+  width: 619px;
+  height: 270px;
+  background-color: rgbA(33,35,37,0.7);
+}
+
+.containerList ul {
+  list-style-position: inside;
+}
+
+
+.containerList ul li {
+  margin-top: 18px;
+  color: white;
 }
 
