--- a/css/styles.css
+++ b/css/styles.css
@@ -10,16 +10,21 @@ html, body {
   height: 100%;
 }
 
+.clear {
+  clear: both;
+}
+
+
 .center {  
-  width: 1280px;
+  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 0 3%;
 }
 
 
 .header {
-  min-width: 1280px;
   width: 100%;
+  padding: 0 2%;
   height: 80px;
   background-color: #212343;
 }
@@ -30,7 +35,7 @@ html, body {
 }
 
 .containerBanner {
-  min-width: 1280px;
+  padding: 0 2%;
   width: 100%;
   height: 557px;
   background-image: url('../images/header_bg.png');
@@ -40,7 +45,7 @@ html, body {
 
 .containerBanner > .center {
   height: 100%;
-  /* text-align: right; */
+  
 }
 
 /* formulario */
@@ -60,7 +65,6 @@ html, body {
 }
 
 .form h2 {
-  margin-top: 10px;
   font-size: 25px;
   font-weight: normal;
   color: #999;
@@ -71,19 +75,26 @@ html, body {
   margin-top: 15px;
 }
 
-.inputContainer  span, p{
+.inputContainer  span{
   display: inline-block;
   width: 100%;
   color: #bbb;
   font-size: 17px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
+.form p{
+  display: inline-block;
+  width: 100%;
+  color: #bbb;
+  font-size: 17px;
+  margin: 20px 0;
+}
 
 .inputContainer  input {
-  font-size: 18px;
+  font-size: 15px;
   font-weight: normal ;
-  margin-top: 15px;
+  margin-top: 8px;
   width: 360px;
   height: 55px;
   border: 1px solid #ccc;
@@ -93,7 +104,7 @@ html, body {
   text-align: center;
 }
 
-.inputContainer  button {  
+.inputSubmitContainer input {  
   color: white;
   font-size: 20px;
   margin-top: 40px;
@@ -106,7 +117,7 @@ html, body {
   transition: 0.4s;
 }
 
-.inputContainer  button:hover{
+.inputSubmitContainer  input:hover{
   background-color:  #232875;
 }
 
@@ -130,7 +141,7 @@ html, body {
 }
 
 .containerSection {
-  padding: 40px 0;
+  padding: 40px 2%;
   background-color:  rgb(228, 222, 222);
   text-align: center;
 }
@@ -141,6 +152,8 @@ html, body {
 }
 
 .containerSection p {
+  width: 100%;
+  max-width: 768px;
   color: #333;
   margin: 15px 0;
   font-size: 20px;
@@ -158,13 +171,13 @@ html, body {
   margin-left: -20px;
   background-image: url('../images/arrow.png');
   background-size: 100% 100%;
-  text-align: center;
+  /* text-align: center; */
 
 }
 
 .section-01 {
   /* min-width: 1280px; */
-  padding: 90px 0;
+  padding: 90px 2%;
 }
 
 .section-01 h2 {
@@ -175,9 +188,9 @@ html, body {
 }
 
 .containerSection2 {
-  min-width: 1280px;
-  margin-top: 40px 0;
-  background-color: #ddd;
+  /* min-width: 1280px; */
+  margin-top: 40px;
+  /* background-color: #ddd; */
   text-align: center;
 }
 
@@ -200,23 +213,121 @@ html, body {
 .textContainerSingle p {
   display: inline-block;
   text-align: justify;
-  padding: 10px 25px;
-  font-size: 15px;
+  padding: 10px;
   color: #444;
 }
 
 .footer {
-  clear: both;
+  /* clear: both; */
   border-top: 3px solid #888;
   padding: 20px 0;
   text-align: center;
+  color: #888
 } 
 
 .footer p {
   margin-top: 8px;
-  color: #444;
 }
 
+@media screen and (max-width: 1024px) {
+  .header {
+    width: 100%;
+    height: auto;
+    padding: 15px 0;
+    text-align: center;
+  }
+
+  .header img {
+    margin: 0;
+  }  
+
+  .containerList {
+    padding: 30px 0;
+    width: 40%;
+    /* float: left; */
+    height: auto;
+    display: inline-block;
+    text-align: center;
+    max-width: 450px;
+  }
+  
+  .containerBanner {
+    padding: 40px 2%;
+    width: 100%;
+    height: auto;
+    /* margin: 0 auto; */
+    text-align: center;
+
+  }
+
+  .form {
+    max-width: 400px;
+    padding: 10px;
+    /* margin-top: 20px; */
+    width: 60%;
+    height: 100%;
+    float: right;
+    top: 0;
+  
+  }
+
+  .inputContainer input {
+    width: 100%;
+    height: 50px;
+  }
+
+  .containerSection {
+    float: none;
+    width: 100%;
+    /* margin: 0 auto; */
+    height: auto;
+    padding: 40px auto;
+    text-align: center;
+  }
+
+  .containerSingle {
+    display: inline-block;
+    float: none;
+    width: 100%;
+    height: 100%;
+    /* margin: 0 auto; */
+    max-width: 650px;
+    padding:  30px 0;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+
+  
+  .containerList {
+    margin-top: 0;
+    float: none;
+    display: inline-block;
+    width: 100%;
+  }
+
+  .form {
+    float: none;
+    display: inline-block;
+    width:  90%;
+    margin-top: 30px;
+  }
+
+  .containerSingle {
+    display: inline-block;
+    float: none;
+    width: 100%;
+    max-width: 600px;
+    padding:  30px 0;
+  }
+
+  .containerSection p {
+  }
+
+  
+}
 
 
 
